patch mes séries affichage

--- a/symfony/assets/styles/app.css
+++ b/symfony/assets/styles/app.css
@@ -64,6 +64,10 @@ body {
     margin-left: 20px;
 }
 
+.search-serie  li {
+  display: none;
+}
+
 #genre {
     background-color: var(--blue-500);
     height: 30px;
