--- a/symfony/templates/user/show.html.twig
+++ b/symfony/templates/user/show.html.twig
@@ -14,15 +14,30 @@
     {% if app.user.id == user.id %}
     <a href="{{ path('app_series_index') }}"><button class=" text-white hover:text-blue-900 bg-blue-800 hover:bg-blue-custom p-2 rounded-2xl m-5 ml-0" type="submit" >Retour à l'accueil</button></a>
     <h1 class="text-3xl text-cyan-200 mb-2 font-semibold">{{ user.name }}</h1>
-    <h1 class="text-2xl text-white">Vos séries suivies</h1>
+    <div class="flex items-center">
+    <h1 class="text-xl text-white border-r-2 pr-5">Vos séries suivies</h1>
+    {% if user.getSeries|length == 1%}
+    <h1 class="flex items-center text-xl text-white mx-5"><p class="text-2xl mr-2">{{ user.getSeries|length }}</p> série suivie</>
+    {% else %}
+    <h1 class="flex items-center text-xl text-white mx-5"><p class="text-2xl mr-2">{{ user.getSeries|length }}</p> séries suivies</>
+    {% endif %}
+    </div>
     {% else %}
     <a href="{{ path('app_admin_dashboard') }}"><button class=" text-white hover:text-blue-900 bg-blue-800 hover:bg-blue-custom p-2 rounded-2xl m-5 ml-0" type="submit" >Retour</button></a>
-    <h1 class="text-2xl text-cyan-200 mb-2 font-semibold">Les séries suivies de {{user.name}}</h1>
-    <h1 class="text-xl text-white">{{user.email}}</h1>
-    <h1 class="text-xl text-white">Inscrit le : {{ user.getRegisterDate()|date("d/m/y") }}</h1>
+    <div class="flex items-baseline text-cyan-200">
+    <h1 class="text-2xl font-semibold">Les séries suivies par {{user.name}}</h1>
+    <h1 class="text-xl ml-2">({{user.email}})</h1>
+    </div>
+    <div class="flex items-center mt-2">
+    <h1 class="text-xl text-white pr-5 border-r-2 ">Inscrit le : {{ user.getRegisterDate()|date("d/m/y") }}</h1>
+    {% if user.getSeries|length == 1%}
+    <h1 class="flex items-center text-xl text-white mx-5"><p class="text-2xl mr-2">{{ user.getSeries|length }}</p> série suivie</>
+    {% else %}
+    <h1 class="flex items-center text-xl text-white mx-5"><p class="text-2xl mr-2">{{ user.getSeries|length }}</p> séries suivies</>
     {% endif %}
-    <h1 class="text-xl text-white">Nombre de séries suivies : {{ user.getSeries|length }}</h1>
-
+    {% endif %}
+    
+    </div>
     <div class=" pagination-my-series">
         {{ knp_pagination_render(seriesList)}}
     </div>
