--- a/symfony/templates/rating/new.html.twig
+++ b/symfony/templates/rating/new.html.twig
@@ -1,11 +1,20 @@
 {#% extends 'base.html.twig' %#}
 
-{% block title %}New Rating{% endblock %}
+{% block stylesheets %}
+{{ encore_entry_link_tags('app') }}
+{% endblock %}
 
 {% block body %}
-    <h1>Create new Rating</h1>
+<div class="bg-transparent">
+    <h1 class="text-3xl text-white">Create new Rating</h1>
 
-    {{ include('rating/_form.html.twig') }}
+    
+    {{ form_start(form) }}
+    <div class="text-red-700">
+        {{ form_widget(form) }}
+        <button class="btn">{{ button_label|default('Save') }}</button>
+    </div>
+    {{ form_end(form) }}
 
-    {# <a href="{{ path('app_rating_index') }}">back to list</a> #}
+</div>
 {% endblock %}
