--- a/symfony/templates/user/show.html.twig
+++ b/symfony/templates/user/show.html.twig
@@ -17,11 +17,19 @@
     <h1 class="text-2xl text-white">Vos séries suivies</h1>
     {% else %}
     <a href="{{ path('app_admin_dashboard') }}"><button class=" text-white hover:text-blue-900 bg-blue-800 hover:bg-blue-custom p-2 rounded-2xl m-5 ml-0" type="submit" >Retour</button></a>
-    <h1 class="text-2xl text-cyan-200 mb-2 font-semibold">Les séries suivies de {{user.name}}</h1>
-    <h1 class="text-xl text-white">{{user.email}}</h1>
-    <h1 class="text-xl text-white">Inscrit le : {{ user.getRegisterDate()|date("d/m/y") }}</h1>
+    <div class="flex items-baseline text-cyan-200">
+    <h1 class="text-2xl  mb-2 font-semibold">Séries suivies par {{user.name}}</h1>
+    <h1 class="text-xl  ml-2">({{user.email}})</h1>
+    </div>
+    <div class="flex items-baseline text-white">
+    <h1 class="text-xl pr-5 border-r-2">Membre depuis le {{ user.getRegisterDate()|date("d/m/y") }}</h1>
     {% endif %}
-    <h1 class="text-xl text-white">Nombre de séries suivies : {{ user.getSeries|length }}</h1>
+    {%if user.getSeries|length == 1%}
+    <h1 class="text-xl ml-5">{{ user.getSeries|length }} série suivie</h1>
+    {% else %}
+    <h1 class="text-xl ml-5">{{ user.getSeries|length }} séries suivies</h1>
+    {% endif %}
+    </div>
 
     <div class=" pagination-my-series">
         {{ knp_pagination_render(seriesList)}}
