--- a/symfony/templates/rating/new.html.twig
+++ b/symfony/templates/rating/new.html.twig
@@ -5,16 +5,22 @@
 {% endblock %}
 
 {% block body %}
-<div class="bg-transparent">
-    <h1 class="text-3xl text-white">Create new Rating</h1>
+<style>
+    body {
+        background-image: none;
+    }
+</style>
+<div class="flex flex-col ml-2 mt-5 w-full">
+    <h1 class="text-3xl text-center text-white font-semibold mb-2">Ajouter une critique</h1>
 
     
     {{ form_start(form) }}
-    <div class="text-red-700">
         {{ form_widget(form) }}
-        <button class="btn">{{ button_label|default('Save') }}</button>
-    </div>
+        <div class="w-full justify-center">
+        <button class="text-2xl w-max mt-5 text-white bg-blue-700 px-5 pb-2 p-1 rounded-3xl">{{ button_label|default('Envoyer') }}</button>
+        </div>
     {{ form_end(form) }}
+    
 
 </div>
 {% endblock %}
