--- a/symfony/templates/series/show.html.twig
+++ b/symfony/templates/series/show.html.twig
@@ -15,13 +15,17 @@
 
                 <div class="flex flex-col items-center">
                 <img src="{{ series.displayPoster }}" alt="poster" class="poster w-2/5 min-w-48 max-w-md rounded-3xl mb-5">
-                {% if app.user %}
-                    {% if series in app.user.getSeries %}
-                        <a href="{{ path('app_series_remove',  {'id': series.id, 'user_id':app.user.id}) }} "><button class="rounded-2xl text-2xl p-4 px-10 hover:bg-red-600 bg-red-700" type="submit">Enlever</button></a>  
-                    {% else %}
-                        <a href="{{ path('app_series_add',  {'id': series.id, 'user_id':app.user.id}) }} "><button class="rounded-2xl text-2xl p-4 px-10 hover:bg-blue-600 bg-blue-700" type="submit">Suivre</button></a>  
-                    {% endif %}
-                {% endif %}
+                    <div class="flex flex-row lg:flex-col items-center mb-5 lg:mb-0">
+                        {% if app.user %}
+                            {% if series in app.user.getSeries %}
+                                <a href="{{ path('app_series_remove',  {'id': series.id, 'user_id':app.user.id}) }} "><button class="rounded-2xl text-2xl p-4 px-10 hover:bg-red-600 bg-red-700" type="submit">Enlever</button></a> 
+
+                            {% else %}
+                                <a href="{{ path('app_series_add',  {'id': series.id, 'user_id':app.user.id}) }} "><button class="rounded-2xl text-2xl p-4 px-10 hover:bg-blue-600 bg-blue-700" type="submit">Suivre</button></a>  
+                            {% endif %}
+                        {% endif %}
+                        <a class="lg:mt-5 lg:ml-0 ml-5 " href="{{ path('app_rating_rates', {'id': series.id}) }}"><h1 class="bg-yellow-400 w-max p-2 px-3 rounded-xl text-black font-semibold">Voir les avis</h1></a>
+                    </div>
                 </div>
 
                 <div class="flex flex-col ml-4">
@@ -126,9 +130,9 @@
                         <div>
                             <iframe class="rounded-3xl mb-10 md:mb-0" width="560" height="315" src="{{ series.getYoutubeTrailer }}" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
                             {% if app.user %}
-                            <iframe height=300 src="{{ path('app_rating_new', {'id': series.id}) }}"></iframe>
-                            <a href="{{ path('app_rating_rates', {'id': series.id}) }}">Voir les avis</a>
-                        {% endif %}
+                                <iframe class="w-full" height=400 src="{{ path('app_rating_new', {'id': series.id}) }}"></iframe>
+                                
+                            {% endif %}
                         </div>
                     </div>
                     
