--- a/symfony/templates/series/index.html.twig
+++ b/symfony/templates/series/index.html.twig
@@ -14,9 +14,9 @@
     
 		{{ form_start(SeriesSearchForm) }}
         <div class="search-serie flex justify-between w-4/5 mx-auto">
-			{{ form_widget(SeriesSearchForm) }}
+		{{ form_widget(SeriesSearchForm) }}
         
-			<button class="bg-blue-700 hover:bg-blue-600 text-xl text-white px-5 p-px rounded-2xl">Rechercher</button>
+			<button class="bg-blue-700 hover:bg-blue-600 text-xl text-white px-5 pb-px rounded-2xl">Rechercher</button>
         </div>
 		{{ form_end(SeriesSearchForm) }}
         
