--- a/symfony/templates/rating/_delete_form.html.twig
+++ b/symfony/templates/rating/_delete_form.html.twig
@@ -1,4 +1,4 @@
 <form method="post" action="{{ path('app_rating_delete', {'id': rating.id}) }}" onsubmit="return confirm('Are you sure you want to delete this item?');">
     <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ rating.id) }}">
-    <button class="btn">Delete</button>
+    <button class="mt-2 p-2 pb-2 px-3 bg-red-700 w-max rounded-2xl hover:bg-red-600 hover:cursor-pointer rounded-tr-none rounded-bl-none">Delete</button>
 </form>
