Correction de la pagination

--- a/symfony/templates/user/index.html.twig
+++ b/symfony/templates/user/index.html.twig
@@ -14,7 +14,7 @@
         {% endif %}
         
         
-        <div class="pagination-h ">
+        <div class="mt-5">
             {{ knp_pagination_render(users)}}
         </div>
         {{ form_start(UserSearchForm) }}
@@ -76,7 +76,7 @@
         {% endfor %}
         </tbody>
     </table>
-    <div class="pagination-b bottom-0 mx-auto w-11/12">
+    <div class="bottom-0 mx-auto w-11/12">
         {{ knp_pagination_render(users)}}
     </div>
 </div>
