--- a/symfony/templates/series/index.html.twig
+++ b/symfony/templates/series/index.html.twig
@@ -61,7 +61,7 @@
         
         </div>
 
-        <div class="pagination-b">
+        <div class="mb-5">
             {{ knp_pagination_render(series)}}
         </div>
 
