--- a/symfony/templates/series/show.html.twig
+++ b/symfony/templates/series/show.html.twig
@@ -61,6 +61,9 @@
                             <h1 class="text-md mx-1" >{{ actor.name }} /</h1>
                         {% endfor %}
                     </div>
+                    <a href="https://www.imdb.com/title/{{ series.imdb }}">
+                        <p class="underline">Lien IMDB</p>
+                    </a>
                     <div class=" flex flex-row flex-wrap ml-2 mt-5 mb-5 justify-between">
                         <div class="flex flex-col items-top mb-5">
                             <div class="flex mb-5">
