--- a/symfony/templates/rating/index.html.twig
+++ b/symfony/templates/rating/index.html.twig
@@ -1,4 +1,4 @@
-{#% extends 'base.html.twig' %#}
+{% extends 'base.html.twig' %}
 
 {% block title %}Rating index{% endblock %}
 
@@ -35,5 +35,5 @@
         </tbody>
     </table>
 
-    {# <a href="{{ path('app_rating_new') }}">Create new</a> #}
+     <a href="{{ path('app_rating_new') }}">Create new</a> 
 {% endblock %}
