--- a/symfony/templates/user/show.html.twig
+++ b/symfony/templates/user/show.html.twig
@@ -78,7 +78,7 @@
     <div class="flex flex-row mb-10 w-full flex-wrap items-start justify-around mt-3">
        
         {% for rate in rates %}
-        <div class="flex-col bg-white p-2 font-semibold rounded-2xl">
+        <div class="flex-col bg-white m-2 p-2 font-semibold rounded-2xl">
             <div class="flex justify-between items-center">
                 <h1 class="text-2xl mr-5">{{ rate.series }}</h1>
                 <div class="flex items-center">
