--- a/symfony/templates/series/show.html.twig
+++ b/symfony/templates/series/show.html.twig
@@ -61,7 +61,7 @@
                             <h1 class="text-md mx-1" >{{ actor.name }} /</h1>
                         {% endfor %}
                     </div>
-                    <a href="https://www.imdb.com/title/{{ series.imdb }}">
+                    <a class="p-2" href="https://www.imdb.com/title/{{ series.imdb }}">
                         <p class="underline">Lien IMDB</p>
                     </a>
                     <div class=" flex flex-row flex-wrap ml-2 mt-5 mb-5 justify-between">
@@ -85,14 +85,24 @@
 
                             <div class="w-96 flex flex-col">
 
-                                <div id="accordion-collapse" class="w-full" data-accordion="collapse">
+                                <div id="accordion-collapse" class="w-full bg-emerald-700" data-accordion="collapse">
                                     {% for season in seasons %}
                                     <h2 id="accordion-collapse-heading-{{ season.number }}">
-                                        <button type="button" class="flex items-center justify-between p-5 w-full font-medium text-left border border-blue-500 text-gray-90 bg-black hover:bg-black focus:bg-black focus:hover:bg-black" data-accordion-target="#accordion-collapse-body-{{ season.number }}" aria-expanded="true" aria-controls="accordion-collapse-body-{{ season.number }}">
+                                        {% if season.getNumberEpisode == season.getNumberEpisodesVus(app.user) %}
+                                            <button type="button" style="background-color:green" class="flex items-center justify-between p-5 w-full font-medium text-left border border-blue-500 text-gray-90 hover:bg-black focus:bg-black focus:hover:bg-black" data-accordion-target="#accordion-collapse-body-{{ season.number }}" aria-expanded="true" aria-controls="accordion-collapse-body-{{ season.number }}">
+                                       {% endif %}
+                                        {% if season.getNumberEpisodesVus(app.user) == 0 %} 
+                                            <button type="button" style="background-color:red" class="flex items-center justify-between p-5 w-full font-medium text-left border border-blue-500 text-gray-90 hover:bg-black focus:bg-black focus:hover:bg-black" data-accordion-target="#accordion-collapse-body-{{ season.number }}" aria-expanded="true" aria-controls="accordion-collapse-body-{{ season.number }}">
+                                        {% endif %}
+                                        {% if season.getNumberEpisodesVus(app.user) >= 1 and season.getNumberEpisodesVus(app.user) < season.getNumberEpisode %} 
+                                            <button type="button" style="background-color:orange" class="flex items-center justify-between p-5 w-full font-medium text-left border border-blue-500 text-gray-90 hover:bg-black focus:bg-black focus:hover:bg-black" data-accordion-target="#accordion-collapse-body-{{ season.number }}" aria-expanded="true" aria-controls="accordion-collapse-body-{{ season.number }}">
+                                        {% endif %}
                                             <div class="flex items-center">
-                                                <span>Saison {{ season.number }}</span>
+                                                <span>Saison {{ season.number }} - {{season.getNumberEpisodesVus(app.user)}}/{{season.getNumberEpisode}} épisodes vus</span>
+                                                
                                                                                      
                                             </div>
+                                            
                                             <svg data-accordion-icon class="w-6 h-6 shrink-0 rotate-180" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M5.293 7.293a1 1 0 011.414 0L10 10.586l3.293-3.293a1 1 0 111.414 1.414l-4 4a1 1 0 01-1.414 0l-4-4a1 1 0 010-1.414z" clip-rule="evenodd"></path></svg>
                                         </button>
                                     </h2>
