style page des avis

--- a/symfony/templates/rating/index.html.twig
+++ b/symfony/templates/rating/index.html.twig
@@ -7,7 +7,7 @@
 
     <table class="table">
         <thead>
-            <tr>
+            <tr class=" flex flex-col justify-around">
                 <th>Id</th>
                 <th>Value</th>
                 <th>Comment</th>
