--- a/symfony/templates/rating/rates.html.twig
+++ b/symfony/templates/rating/rates.html.twig
@@ -3,33 +3,37 @@
 
 {% block body %}
 <div class="w-4/5 mx-auto text-white">
-    <h1 class="text-3xl font-bold mb-5">Liste des utilisateurs</h1>
+    <h1 class="text-3xl font-bold mb-5">Liste des critiques de {{ series.title}}</h1>
 
-    <table class="flex flex-col w-full">
-        <thead>
-            <tr class="w-full justify-around">
-                <th>Id</th>
-                <th>Value</th>
-                <th>Comment</th>
-                <th>Date</th>
-                <th>actions</th>
-            </tr>
-        </thead>
-        <tbody class="flex justify-around">
+        <div class="flex w-full">
         {% for r in seriesRates %}
-            <tr>
-                <td>{{ r.id }}</td>
-                <td>{{ r.value }}</td>
-                <td>{{ r.comment }}</td>
-                <td>{{ r.date ? r.date|date('Y-m-d H:i:s') : '' }}</td>
-            </tr>
+            <div class="bg-blue-800 w-max m-2 rounded-lg">
+                <h1 class="text-sm p-2 pb-1">Ajouté le {{ r.date ? r.date|date('d-m-Y') : '' }}</h1>
+                <h1 class="bg-blue-500 px-5 p-2 mb-2 text-lg text-center text-black font-semibold">Critique faite par {{ r.user.getName}}</h1>
+                <div class="flex flex-col m-5">
+                    <div class="items-center flex ">
+                        {% for i in range(0.5, 5) %}
+                            {% if r.value/2 >= i %}
+                                {% if r.value/2 > i %}
+                                    <img class="h-5 w-5 mx-1" src="{{ asset('img/star_fill.png') }}">
+                                {% elseif r.value/2 == i %}
+                                    <img class="h-5 w-5 mx-1" src="{{ asset('img/star_demi.png') }}">
+                                {% endif %}
+                            {% else %}
+                                <img class="h-5 w-5 mx-1" src="{{ asset('img/star_empty.png') }}">
+                            {% endif %}
+                        {% endfor %} 
+                        <h1 class="mx-2">{{ r.value/2 }}/5</h1> 
+                    </div>
+                    <h1 class="mt-3 ml-1">{{ r.comment }}</h1>
+                </div>
+            </div>
         {% else %}
-            <tr>
-                <td colspan="5" class="text-2xl">no records found</td>
-            </tr>
+            <div>
+                <h1 class="text-2xl">Aucune critique trouvée</h1>
+            </div>
         {% endfor %}
-        </tbody>
-    </table>
+        </div>
 </div>
 
     {# <a href="{{ path('app_rating_new') }}">Create new</a> #}
