--- a/symfony/templates/series/show.html.twig
+++ b/symfony/templates/series/show.html.twig
@@ -66,6 +66,7 @@
                     </a>
                     <div class=" flex flex-row flex-wrap ml-2 mt-5 mb-5 justify-between">
                         <div class="flex flex-col items-top mb-5">
+                            
                             {% if series.getNumberRates != 0%}
                             <div class="flex mb-5">
                                 {% for i in range(0.5, 5) %}
@@ -84,32 +85,38 @@
                                 <h1 class="text-3xl mt-2 ml-5">{{series.getMoyRates/2}}/5</h1>
                             </div>
                             {% else %}
-                            <h1 class="text-3xl">Pas assez de notes</h1>
+                            <h1 class="text-2xl mb-5">Pas assez de notes</h1>
                             {% endif %}
+                           
 
                             <div class="w-96 flex flex-col">
 
                                 <div id="accordion-collapse" class="w-full bg-emerald-700" data-accordion="collapse">
                                     {% for season in seasons %}
-                                    <h2 id="accordion-collapse-heading-{{ season.number }}">
-                                        {% if season.getNumberEpisode == season.getNumberEpisodesVus(app.user) %}
-                                            <button type="button" style="background-color:green" class="flex items-center justify-between p-5 w-full font-medium text-left border border-blue-500 text-gray-90 hover:bg-black focus:bg-black focus:hover:bg-black" data-accordion-target="#accordion-collapse-body-{{ season.number }}" aria-expanded="true" aria-controls="accordion-collapse-body-{{ season.number }}">
-                                       {% endif %}
-                                        {% if season.getNumberEpisodesVus(app.user) == 0 %} 
-                                            <button type="button" style="background-color:red" class="flex items-center justify-between p-5 w-full font-medium text-left border border-blue-500 text-gray-90 hover:bg-black focus:bg-black focus:hover:bg-black" data-accordion-target="#accordion-collapse-body-{{ season.number }}" aria-expanded="true" aria-controls="accordion-collapse-body-{{ season.number }}">
-                                        {% endif %}
-                                        {% if season.getNumberEpisodesVus(app.user) >= 1 and season.getNumberEpisodesVus(app.user) < season.getNumberEpisode %} 
-                                            <button type="button" style="background-color:orange" class="flex items-center justify-between p-5 w-full font-medium text-left border border-blue-500 text-gray-90 hover:bg-black focus:bg-black focus:hover:bg-black" data-accordion-target="#accordion-collapse-body-{{ season.number }}" aria-expanded="true" aria-controls="accordion-collapse-body-{{ season.number }}">
-                                        {% endif %}
+                                        <h2 id="accordion-collapse-heading-{{ season.number }}">
+                                            {% if season.getAvancement(app.user) <= 10 %}
+                                                <div class="w-full bg-gray-200 rounded-t">
+                                                    <div class="bg-blue-600 text-xs font-medium text-blue-100 text-center p-0.5 leading-none " style="width: {{ season.getAvancement(app.user) }}%"> {{ season.getAvancement(app.user) }}%</div>
+                                                </div>
+                                            {% else %}
+                                                <div class="w-full bg-gray-200 rounded-t">
+                                                    <div class="bg-blue-600 text-xs font-medium text-blue-100 text-center p-0.5 leading-none " style="width: {{ season.getAvancement(app.user) }}%"> {{ season.getAvancement(app.user) }}%</div>
+                                                </div>
+                                            {%endif%}
+                                            {% if season.getNumberEpisode == season.getNumberEpisodesVus(app.user) %}
+                                                <button type="button" style="background-color:green" class="flex items-center justify-between p-5 w-full font-medium text-left border border-blue-500 text-gray-90 hover:bg-black focus:bg-black focus:hover:bg-black" data-accordion-target="#accordion-collapse-body-{{ season.number }}" aria-expanded="true" aria-controls="accordion-collapse-body-{{ season.number }}">
+                                            {% endif %}
+                                            {% if season.getNumberEpisodesVus(app.user) == 0 %} 
+                                                <button type="button" style="background-color:red" class="flex items-center justify-between p-5 w-full font-medium text-left border border-blue-500 text-gray-90 hover:bg-black focus:bg-black focus:hover:bg-black" data-accordion-target="#accordion-collapse-body-{{ season.number }}" aria-expanded="true" aria-controls="accordion-collapse-body-{{ season.number }}">
+                                            {% endif %}
+                                            {% if season.getNumberEpisodesVus(app.user) >= 1 and season.getNumberEpisodesVus(app.user) < season.getNumberEpisode %} 
+                                                <button type="button" style="background-color:orange" class="flex items-center justify-between p-5 w-full font-medium text-left border border-blue-500 text-gray-90 hover:bg-black focus:bg-black focus:hover:bg-black" data-accordion-target="#accordion-collapse-body-{{ season.number }}" aria-expanded="true" aria-controls="accordion-collapse-body-{{ season.number }}">
+                                            {% endif %}
                                             <div class="flex items-center">
-                                                <span>Saison {{ season.number }} - {{season.getNumberEpisodesVus(app.user)}}/{{season.getNumberEpisode}} épisodes vus</span>
-                                                
-                                                                                     
+                                                <span>Saison {{ season.number }} - {{season.getNumberEpisodesVus(app.user)}}/{{season.getNumberEpisode}} épisodes vus</span>                                      
                                             </div>
-                                            
                                             <svg data-accordion-icon class="w-6 h-6 shrink-0 rotate-180" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M5.293 7.293a1 1 0 011.414 0L10 10.586l3.293-3.293a1 1 0 111.414 1.414l-4 4a1 1 0 01-1.414 0l-4-4a1 1 0 010-1.414z" clip-rule="evenodd"></path></svg>
-                                        </button>
-                                    </h2>
+                                        </h2>
                                     <div id="accordion-collapse-body-{{ season.number }}" class="w-full hidden" aria-labelledby="accordion-collapse-heading-{{season.number}}">
                                         <div class="flex flex-wrap w-full px-5 py-2 border border-blue-500 ">
                                             <ul class="w-full text-xl">
