--- a/symfony/templates/user/_form.html.twig
+++ b/symfony/templates/user/_form.html.twig
@@ -1,4 +1,27 @@
+{% extends 'base.html.twig' %}
+
+{% block stylesheets %}
+{{ encore_entry_link_tags('app') }}
+{% endblock %}
+
+{% block body %}
+<div class="text-white text-xl">
 {{ form_start(form) }}
-    {{ form_widget(form) }}
-    <button class="btn">{{ button_label|default('Save') }}</button>
+    <div class="flex flex-col items-center">
+        {{ form_row(form.name, {
+            'attr' :{'class': 'text-black ml-5 m-2 p-1 rounded-2xl px-5 text-xl'}
+
+        }) }}
+        {{ form_row(form.password, {
+            'attr' :{'class': 'text-black ml-5 m-2 p-1 rounded-2xl px-5 text-xl'}
+        }) }}
+        {{ form_row(form.country, {
+            'attr' :{'class': 'text-black ml-5 m-2 p-1 rounded-2xl px-5 text-xl'}
+
+        }) }}
+        <button class="btn">{{ button_label|default('Save') }}</button>
+    </div>
 {{ form_end(form) }}
+</div>
+
+{% endblock %}
