--- a/symfony/templates/user/edit.html.twig
+++ b/symfony/templates/user/edit.html.twig
@@ -1,13 +1,11 @@
 
 
-{% block title %}Edit User{% endblock %}
-
 {% block body %}
-    <h1>Edit User</h1>
+    <h1>Mise à jour du profil</h1>
 
     {{ include('user/_form.html.twig', {'button_label': 'Update'}) }}
 
-    <a href="{{ path('app_user_index') }}">back to list</a>
+    <a href="{{ path('app_user_show', {'id': app.user.id}) }}">Retour au profil</a>
 
     {{ include('user/_delete_form.html.twig') }}
 {% endblock %}
