--- a/symfony/templates/user/show.html.twig
+++ b/symfony/templates/user/show.html.twig
@@ -12,8 +12,13 @@
 {% block body %}
 <div class="flex-col flex w-4/5 mx-auto">
     {% if app.user.id == user.id %}
-        <a href="{{ path('app_series_index') }}"><button class=" text-white hover:text-blue-900 bg-blue-800 hover:bg-blue-custom p-2 rounded-2xl m-5 ml-0" type="submit" >Retour à l'accueil</button></a>
+        <a href="{{ path('app_series_index') }}"><button class=" text-white hover:text-blue-900 bg-blue-800 hover:bg-blue-800 p-2 rounded-2xl m-5 ml-0" type="submit" >Retour à l'accueil</button></a>
+        <div class="flex items-center justify-between">
         <h1 class="text-3xl text-cyan-200 mb-2 font-semibold">{{ user.name }}</h1>
+        <a href="{{ path('app_user_edit', {'id': app.user.getId})}}">
+            <button class="bg-blue-700 hover:bg-blue-600 text-white px-5 p-2 rounded-2xl">Changer infos personnelles</button>
+        </a>
+        </div>
         <div class="flex items-baseline text-white">
             <h1 class="text-xl pr-5 border-r-2">Vos séries suivies</h1>
     {% else %}
