--- a/symfony/templates/series/show.html.twig
+++ b/symfony/templates/series/show.html.twig
@@ -66,7 +66,7 @@
                     </a>
                     <div class=" flex flex-row flex-wrap ml-2 mt-5 mb-5 justify-between">
                         <div class="flex flex-col items-top mb-5">
-                            {% if series.getNumberRates != 0%}
+                            {% if series.getNumberRates != 0 %}
                             <div class="flex mb-5">
                                 {% for i in range(0.5, 5) %}
                                         {% if series.getMoyRates/2 >= i %}
@@ -81,7 +81,7 @@
                                         
             
                                 {% endfor %} 
-                                <h1 class="text-3xl mt-2 ml-5">{{series.getMoyRates/2}}/5</h1>
+                                <h1 class="text-3xl mt-2 ml-5">({{ series.getNumberRates }} votes)</h1>
                             </div>
                             {% else %}
                             <h1 class="text-3xl">Pas assez de notes</h1>
